--- a/index.html
+++ b/index.html
@@ -1,12 +1,295 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link href="dizajn.css" rel="stylesheet">
     <title>Dino Červar</title>
-</head>
+<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=brYzFK4o0lD-k1pygKhi4aPqkeAJSjT2ypVtO8ck49rfeAqE6NDMmmEj67IJyOMlkQ0rkkZSqZznbEzDMCVdDg" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9sdWthYnJvZGFyaWMuZ2l0aHViLmlvLw"/></head>
+
 <body>
-    <h1>Dino Červar</h1>
+    <header class="text-gray-600 bg-blue-800 body-font">
+        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+            <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+                <span class="ml-3 text-xl">Dino Červar</span>
+            </a>
+            <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
+                <a href="https://cervar.github.io/" class="mr-5 hover:text-white">Home</a>
+                <a href="#O-meni" class="mr-5 hover:text-white">O meni</a>
+                <a href="#Portfolio" class="mr-5 hover:text-white">Radovi</a>
+                <a href="#Kontakt" class="mr-5 hover:text-white">Kontakt</a>
+            </nav>
+
+        </div>
+    </header>
+
+    <section class="text-gray-300 bg-blue-900 body-font">
+        <div class="container px-5 py-24 mx-auto flex flex-col">
+            <section id="O-meni">
+                <div class="lg:w-4/6 mx-auto">
+            </section>
+            <div>
+                <div class="floating"
+                    style="text-align: center; font-size: 75px; margin-bottom: 250px; margin-top: 80px; ">Dobrodošli na moju WEB stranicu
+                </div>
+
+
+
+
+
+
+
+            </div>
+            <div class="flex flex-col sm:flex-row mt-10">
+                <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
+                    <div
+                        class="w-20 h-20 rounded-full inline-flex items-center justify-center bg-gray-800 text-gray-600">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="2" class="w-10 h-10" viewBox="0 0 24 24">
+                            <img class="rounded-full" style="border: 1cm;" src="https://github.com/cervar/cervar.github.io/blob/master/profilna.jpg?raw=true">
+                            <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
+                            <circle cx="12" cy="7" r="4"></circle>
+
+                        </svg>
+                    </div>
+                    <div class="flex flex-col items-center text-center justify-center">
+                        <h2 class="font-medium title-font mt-4 text-white text-lg">Dino Červar</h2>
+                        <div class="w-12 h-1 bg-blue-500 rounded mt-2 mb-4"></div>
+                        <p class="text-base text-gray-400">“Za svaki projekt koliko god bilo malo vremena kreativnost Vas potiče da budete brži i produktivniji.”</p>
+                    </div>
+                </div>
+                <div
+                    class="sm:w-2/3 sm:pl-8 sm:py-8 sm:border-l border-gray-800 sm:border-t-0 border-t mt-4 pt-4 sm:mt-0 text-center sm:text-left">
+                    <p class="leading-relaxed text-lg mb-4">Pozdrav svima, ja sam Dino Červar, student 2. godine studija informatike u Puli. Od malena me interesirala tehnologija te izrađivanje i smišljanje novih stvari. Kako je programiranje i izrada WEB-a budućnost želio sam se iskušat u ovome.Do sada nemam nekog iskustva ali s svoje 33 godine nikada nije kasno da to savladam. Što se tiče kreativnosti shvatio sam da mi leži pošto mi je hobi video montaža i obrada.
+                    </p>
+                </div>
+            </div>
+            <section id="Portfolio">
+        </div>
+    </section>
+    </div>
+
+    </section>
+    <section class="text-gray-400 bg-blue-900 body-font">
+
+        <div class="container px-5 py-24 mx-auto">
+            <div class="flex flex-wrap -m-4">
+
+                <div class="p-4 lg:w-1/3">
+                    <div
+                        class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
+                        <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">VIDEO EDITING</h2>
+                        <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">jedan od mojih radova</h1>
+                        <p class="leading-relaxed mb-3">Kako sam radio na lokalnoj televiziji i tamo imam montirane na stotine videa</p>
+                        <a href="https://youtu.be/qMddxMCz87g" class="text-blue-400 inline-flex items-center">Learn More
+                            <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M5 12h14"></path>
+                                <path d="M12 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
+                        <div
+                            class="text-center mt-2 leading-none flex justify-center absolute bottom-0 left-0 w-full py-4">
+                            <span
+                                class="text-gray-500 mr-3 inline-flex items-center leading-none text-sm pr-3 py-1 border-r-2 border-gray-700 border-opacity-50">
+                                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                    <circle cx="12" cy="12" r="3"></circle>
+                                </svg>69.5K
+                            </span>
+                            <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                    </path>
+                                </svg>300
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-4 lg:w-1/3">
+                    <div
+                        class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
+                        <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">WORDPRESS</h2>
+                        <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">multimedija
+                        </h1>
+                        <p class="leading-relaxed mb-3">Stranica s multimedijom koja je bila za projekt prošle godine. &nbsp;&nbsp;</br></br></p>
+                        <a href="https://dinocervar.wordpress.com/"
+                            class="text-blue-400 inline-flex items-center">Learn More
+                            <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M5 12h14"></path>
+                                <path d="M12 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
+                        <div
+                            class="text-center mt-2 leading-none flex justify-center absolute bottom-0 left-0 w-full py-4">
+                            <span
+                                class="text-gray-500 mr-3 inline-flex items-center leading-none text-sm pr-3 py-1 border-r-2 border-gray-700 border-opacity-50">
+                                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                    <circle cx="12" cy="12" r="3"></circle>
+                                </svg>27K
+                            </span>
+                            <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                    </path>
+                                </svg>963
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-4 lg:w-1/3">
+                    <div
+                        class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
+                        <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">IMAGES</h2>
+                        <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">amaterske fotografije</h1>
+                        <p class="leading-relaxed mb-3">kako se amaterski bavim fotografijom neki od mojih radova </br></br></p>
+                        <a href="https://www.shutterstock.com/g/cherwar?rid=259079612"
+                            class="text-blue-400 inline-flex items-center">Learn More
+                            <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
+                                fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M5 12h14"></path>
+                                <path d="M12 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
+                        <div
+                            class="text-center mt-2 leading-none flex justify-center absolute bottom-0 left-0 w-full py-4">
+                            <span
+                                class="text-gray-500 mr-3 inline-flex items-center leading-none text-sm pr-3 py-1 border-r-2 border-gray-700 border-opacity-50">
+                                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                    <circle cx="12" cy="12" r="3"></circle>
+                                </svg>94K
+                            </span>
+                            <span class="text-gray-500 inline-flex items-center leading-none text-sm">
+                                <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                    </path>
+                                </svg>140K
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="leading-normal my-5">
+            </p>
+        </div>
+        <section id="Kontakt">
+            <div></div>
+        </section>
+    </section>
+
+
+
+    <section class="text-gray-400 bg-gray-900 body-font relative">
+        <div class="container px-5 py-24 mx-auto">
+            <div class="flex flex-col text-center w-full mb-12">
+                <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Kontaktiraj me</h1>
+                <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Ukoliko vas zanimaju neke informacije slobodno
+                    pošaljite upit.</p>
+            </div>
+            <form action="https://formspree.io/f/myylazzv" method="POST">
+                <div class="lg:w-1/2 md:w-2/3 mx-auto">
+                    <div class="flex flex-wrap -m-2">
+                        <div class="p-2 w-1/2">
+                            <div class="relative">
+                                <label for="name" class="leading-7 text-sm text-gray-400">Name</label>
+                                <input type="text" id="name" name="name"
+                                    class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-blue-500 focus:bg-gray-900 focus:ring-2 focus:ring-blue-900 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                            </div>
+                        </div>
+                        <div class="p-2 w-1/2">
+                            <div class="relative">
+                                <label for="email" class="leading-7 text-sm text-gray-400">Email</label>
+                                <input type="email" id="email" name="email"
+                                    class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-blue-500 focus:bg-gray-900 focus:ring-2 focus:ring-blue-900 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                            </div>
+                        </div>
+                        <div class="p-2 w-full">
+                            <div class="relative">
+                                <label for="message" class="leading-7 text-sm text-gray-400">Message</label>
+                                <textarea id="message" name="message"
+                                    class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-blue-500 focus:bg-gray-900 focus:ring-2 focus:ring-blue-900 h-32 text-base outline-none text-gray-100 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                            </div>
+                        </div>
+                        <div class="p-2 w-full">
+                            <button
+                                class="flex mx-auto text-white bg-blue-500 border-0 py-2 px-8 focus:outline-none hover:bg-blue-600 rounded text-lg">SEND</button>
+                        </div>
+
+            </form>
+            <div class="p-2 w-full pt-8 mt-8 border-t border-gray-800 text-center">
+                <a class="text-blue-400">dcervar@unipu.hr
+                    
+                </a>
+                <p class="leading-normal my-5">
+                </p>
+                <span class="inline-flex">
+                    <a class="text-gray-500">
+                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            class="w-5 h-5" viewBox="0 0 24 24">
+                            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                        </svg>
+                    </a>
+                    <a class="ml-4 text-gray-500">
+                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            class="w-5 h-5" viewBox="0 0 24 24">
+                            <path
+                                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a class="ml-4 text-gray-500">
+                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                        </svg>
+                    </a>
+                    <a class="ml-4 text-gray-500">
+                        <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            class="w-5 h-5" viewBox="0 0 24 24">
+                            <path
+                                d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                            </path>
+                        </svg>
+                    </a>
+                </span>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+
+    <footer class="text-gray-400 bg-gray-900 body-font">
+        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+            <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
+
+                <span class="ml-3 text-xl">Dino Červar</span>
+            </a>
+            <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4">©
+                2021 —
+                <a href="https://www.instagram.com/dinocervar/" class="text-gray-500 ml-1" target="_blank"
+                    rel="noopener noreferrer">@dino.cervar</a>
+            </p>
+
+        </div>
+    </footer>
+
 </body>
+
 </html>
