--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">VIDEO EDITING</h2>
                         <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">jedan od mojih radova</h1>
                         <p class="leading-relaxed mb-3">Kako sam radio na lokalnoj televiziji i tamo imam montirane na stotine videa</p>
-                        <a href="https://youtu.be/qMddxMCz87g" class="text-blue-400 inline-flex items-center">Learn More
+                        <a href="https://vimeo.com/633248094" class="text-blue-400 inline-flex items-center">Learn More
                             <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M5 12h14"></path>
